--- a/index.html
+++ b/index.html
@@ -821,6 +821,15 @@
         };            
     </script>
 
+    <script>
+      $(document).ready(function() {
+          new WOW().init();
+          $(window).resize(function() {
+            new WOW().init();
+          });
+      });
+  </script>
+
 </body>
 </html>
 
