--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link href = "https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel                                               = "stylesheet">
     <link href = "https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.min.css" rel = "stylesheet">
 
+    <!-- AOS Linke -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!-- css link -->
     <link rel = "stylesheet" href = "css/style.css">
 
@@ -67,14 +70,14 @@
     <!-- home section -->
     <section class          = "home" id                             = "home">
     <div     class          = "arrow animated bounce"></div>
-    <canvas  class          = "background"></canvas>
+    <canvas  class          = "background"></canvas> 
     <div     class          = "content">
-    <div     class          = "wow fadeInUp" data-wow-duration      = "2s" data-wow-delay = "0s">
-                <h3>WELCOME TO</h3>
+    <div data-aos ="fade-up" data-aos-duration="3000">
+                   <h3>WELCOME TO</h3> 
                 <h1>SUNROB ROBOTICS</h1>
                 <p>Sunrob Robotics provides robot solutions for all industries and resells robot-related products to consumers.</p>
             </div>
-            <div  class = "wow fadeInRight" data-wow-duration = "2s">
+            <div data-aos ="fade-right" data-aos-duration="3000">
             <a    href  = "#about" class                      = "group relative inline-block focus:outline-none focus:ring" id = "btn" href = "">
             <span class = "absolute inset-0 translate-x-1.5 translate-y-1.5 bg-yellow-300 transition-transform group-hover:translate-y-0 group-hover:translate-x-0"></span>
             <span id    = "btn-text"class                     = "relative inline-block border-2 border-current px-8 py-3 text-sm font-bold uppercase tracking-widest text-black group-active:text-opacity-75">
@@ -89,9 +92,9 @@
 
     <!-- about section -->
     <section class = "about" id                       = "about">
-    <div     class = "wow fadeInUp" data-wow-duration = "2s" data-wow-offset   = "0">
+    <div data-aos ="fade-up" data-aos-duration="2000">
     <h1      class = "heading"> <span>About</span>Us</h1></div>
-    <div     class = "wow swing" data-wow-duration    = "1.2s" data-wow-offset = "0">
+    <div data-aos ="flip-right" data-aos-duration="2000">
     <div     class = "row">
     <div     class = "video-container">
     <video   src   = "img/videos/demo1.mp4" autoplay loop muted></video>
@@ -113,11 +116,11 @@
     <div class = "products-container">
     <!-- component -->
     <div class = "min-w-screen min-h-screen bg-yellow-300 flex items-center p-5 lg:p-10 overflow-hidden relative" id = "products-component">
-    <div class = "wow fadeInUp" data-wow-duration                                                                    = "1.5s" data-wow-offset = "0">
+    <div data-aos ="fade-up" data-aos-duration="3000">
     <div class = "products-header">
     <h1  class = "heading">
                 <span>Our</span>Products</h1></div></div>
-        <div class = "wow bounceIn" data-wow-duration                                                                          = "1.7s" data-wow-offset     = "0">
+        <div data-aos ="flip-up" data-aos-duration="2000">        
         <div class = "w-full max-w-6xl rounded bg-white shadow-xl p-10 lg:p-20 mx-auto text-gray-800 relative md:text-left" id = "products-inner-component">
         <div class = "md:flex items-center -mx-10" id                                                                          = "products-inner-card">
         <div class = "w-full md:w-1/2 px-10 mb-10 md:mb-0">
@@ -161,8 +164,8 @@
 
 
     <!-- FAQ section -->
-    <div     class = "wow bounceInUp" data-wow-duration = "1.5s" data-wow-offset = "0">
-    <section class = "text-gray-700" id                 = "faq">
+    <div data-aos ="zoom-in-up" data-aos-duration="2000">
+   <section class = "text-gray-700" id                 = "faq">
     <h1      class = "heading"> <span>FAQ</span>s</h1>
     <div     class = "faq-container">
     <div     class = "container px-5 py-24 mx-auto">
@@ -255,9 +258,9 @@
 
     <!-- news section -->
     <section class = "news" id                        = "news">
-    <div     class = "wow fadeInUp" data-wow-duration = "2s" data-wow-offset = "0"><h1 class = "heading">our<span>News</span> </h1></div>
-    
-    <div class = "wow bounceInLeft" data-wow-duration = "2s" data-wow-offset = "0">
+    <div data-aos ="fade-up" data-aos-duration="3000">
+    <h1 class = "heading">our<span>News</span> </h1></div>
+    <div data-aos ="fade-up-left" data-aos-duration="2000">
     <div class = "news-container" id                  = "news-container">
     <div class = "news-btn-container">
             <a class = "inline-block rounded-full border border-indigo-600 p-3 text-indigo-600 hover:bg-indigo-600 hover:text-white focus:outline-none focus:ring active:bg-indigo-500"
@@ -364,7 +367,7 @@
     <!-- contact section -->
     <section class = "contact" id                          = "contact">
     <h1      class = "heading">contact<span>Us</span> </h1>
-    <div     class = "wow bounceInRight" data-wow-duration = "2s" data-wow-offset = "0">
+    <div data-aos ="fade-up" data-aos-duration="3000">
     <section class = "text-gray-600 body-font relative">
     <div     class = "absolute inset-0 bg-gray-300">
     <iframe  width = "100%" height                         = "100%" frameborder   = "0" marginheight = "0" marginwidth = "0" title = "map" scrolling = "no" src = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3186.422482071919!2d28.213598836861966!3d61.0616983363162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4690958c31227795%3A0x4c1b6af6fa2b342e!2sLauritsalantie%201%2C%2053100%20Lappeenranta%2C%20Finland!5e0!3m2!1sen!2snp!4v1645100618126!5m2!1sen!2snp" style = ""></iframe>
@@ -394,7 +397,7 @@
 
 
     <!-- footer -->
-    <div    class      = "wow fadeInUp" data-wow-duration = "2s" data-wow-offset = "0">
+    <div data-aos ="fade-up" data-aos-duration="2000">
     <footer aria-label = "Site Footer" class              = "bg-white">
     <div    class      = "mx-auto max-w-screen-xl px-4 pt-16 pb-6 sm:px-6 lg:px-8 lg:pt-24">
     <div    class      = "grid grid-cols-1 gap-8 lg:grid-cols-3">
@@ -776,9 +779,13 @@
     <!-- page animation wow js -->
     <script src = "https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-        new WOW().init();
+        AOS.init(); 
     </script>
+    <!-- <script>
+        new WOW().init();
+    </script> -->
 
     <!-- header animation -->
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
@@ -820,15 +827,6 @@
               });
         };            
     </script>
-
-    <script>
-      $(document).ready(function() {
-          new WOW().init();
-          $(window).resize(function() {
-            new WOW().init();
-          });
-      });
-  </script>
 
 </body>
 </html>
