--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
     <div     class          = "arrow animated bounce"></div>
     <canvas  class          = "background"></canvas> 
     <div     class          = "content">
-    <div data-aos ="fade-up" data-aos-duration="3000">
+    <div data-aos ="fade-down-left" data-aos-duration="3000">
                    <h3>WELCOME TO</h3> 
                 <h1>SUNROB ROBOTICS</h1>
                 <p>Sunrob Robotics provides robot solutions for all industries and resells robot-related products to consumers.</p>
             </div>
-            <div data-aos ="fade-right" data-aos-duration="3000">
+            <div data-aos ="fade-up-right" data-aos-duration="3000">
             <a    href  = "#about" class                      = "group relative inline-block focus:outline-none focus:ring" id = "btn" href = "">
             <span class = "absolute inset-0 translate-x-1.5 translate-y-1.5 bg-yellow-300 transition-transform group-hover:translate-y-0 group-hover:translate-x-0"></span>
             <span id    = "btn-text"class                     = "relative inline-block border-2 border-current px-8 py-3 text-sm font-bold uppercase tracking-widest text-black group-active:text-opacity-75">
