--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-        AOS.init(); 
+        AOS.init({once: true}); 
     </script>
     <!-- <script>
         new WOW().init();
